Fix menu visualization on mobiles.
On mobiles font color was white and menu background was white too.
Changed font color to green.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -84,6 +84,7 @@
 
         .page-link {
             display: block;
+            color: $brand-color;
             padding: 5px 10px;
         }
     }
